@@ -45,6 +45,7 @@
 	* Mark Whitley -- remix of xargs
 	* Jim Gleason <jimg@lineo.com> -- fixed tar so it no longer breaks 
 	    hard links.
+	* Matt Kraai -- logger now logs all arguments, not just the first
 
 
 	 -Erik Andersen
